# PhobCGCC-USB-C-SW

./: README.md
PhobGCC/common/: structsAndEnums.h
PhobGCC/rp2040/: CMakeLists.txt
PhobGCC/rp2040/include/: Phob2_0.h  readHardware.h  tusb_config.h
PhobGCC/rp2040/include/comms/: usbAdapter.hpp
PhobGCC/rp2040/src/: main.cpp  usb_gc_adapter.cpp
